force-app/main/default/objects/Default_Process__c/Default_Process__c.object-meta.xml
<CustomObject>
    <label>DocGenius Default Process</label>
    <nameField>
        <displayFormat>DG_Default_Process-{000000}</displayFormat>
        <label>DocGenius Default Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGenius Default Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>