force-app/main/default/objects/Default_Process__c/fields/ButtonName__c.field-meta.xml
<CustomField>
    <fullName>ButtonName__c</fullName>
    <label>ButtonName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>