force-app/main/default/objects/Default_Process__c/fields/Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses__c</fullName>
    <label>Email_Addresses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>