force-app/main/default/objects/Default_Process__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email_Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>