force-app/main/default/objects/Default_Process__c/fields/External_Storage__c.field-meta.xml
<CustomField>
    <fullName>External_Storage__c</fullName>
    <label>External_Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>