force-app/main/default/objects/Default_Process__c/fields/Internal_Storage__c.field-meta.xml
<CustomField>
    <fullName>Internal_Storage__c</fullName>
    <label>Internal_Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>