force-app/main/default/objects/Default_Process__c/fields/Output_Channel__c.field-meta.xml
<CustomField>
    <fullName>Output_Channel__c</fullName>
    <label>Output_Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>