force-app/main/default/objects/Default_Process__c/fields/Selected_Document_Folder__c.field-meta.xml
<CustomField>
    <fullName>Selected_Document_Folder__c</fullName>
    <label>Selected Document Folder</label>
    <length>20</length>
    <type>Text</type>
</CustomField>